<resources>
    <!--  Questions  -->
    <string name="question_1">Alexandros Mograine was the name of the original Lich King</string>
    <string name="question_2">Sylvannas Windrunner ordered the burning of Teldrassil</string>
    <string name="question_3">Deathwing\'s Son\'s name was Neltharion</string>
    <string name="question_4">Mathias Shaw and Flynn Fairwind became lovers after Battle for Azeroth concluded</string>
    <string name="question_5">The SI:7 is a secretive Horde band of rogues who gather info for Orgrimmar</string>
    <string name="question_6">Odyn gave up his eye to be able to peer into the Shadowlands</string>
    <string name="question_7">Illidan sacrificed his freedom to imprison Yogg-Saron in Seat of the Pantheon</string>
    <string name="question_8">Sargeras was the titan that tore a hole in Azeroth with his sword</string>
    <string name="question_9">The Brokers are a group of inter-dimensional traders that were first introduced in The Burning Crusade</string>
    <string name="question_10">Darion Mograine killed his own father, Alexandros, in service of The Lich King</string>
    <string name="app_name">app-wowquiz-assn2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_over_title">Game Over!</string>
    <string name="game_fragment_title">WoW Quiz Game</string>
    <string name="rules_fragment_title">Rules</string>
    <string name="about_fragment_title">About</string>
    <string name="title_fragment_title">Title</string>
    <string name="play_button_text">Play</string>
    <string name="title_image_desc">title image</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="about_text">"World of Warcraft is a Online MMORPG (Massively Multiplayer Online Roleplaying Game) developed by Blizzard Entertainment in Los Angelos, California. This quiz game is full of key lore concepts that are scattered throughout Azeroth.  "</string>
    <string name="title_text">World of Warcraft Quiz</string>
    <string name="rules_text">Select the answer from the options given. Once you answer a question you can\'t change your answer. Once you have answered all the questions you will go to a page that tells you your score.</string>
</resources>