<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.android.example.app_wowquiz_assn2.title.TitleFragment"
        android:label="@string/title_fragment_title"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@+id/gameFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.android.example.app_wowquiz_assn2.drawer.AboutFragment"
        android:label="@string/about_fragment_title"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_aboutFragment_to_titleFragment"
            app:destination="@+id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.android.example.app_wowquiz_assn2.drawer.RulesFragment"
        android:label="@string/rules_fragment_title"
        tools:layout="@layout/fragment_rules">
        <action
            android:id="@+id/action_rulesFragment_to_titleFragment"
            app:destination="@+id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.android.example.app_wowquiz_assn2.game.GameFragment"
        android:label="@string/game_fragment_title"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameOverFragment"
            app:destination="@id/gameOverFragment"
            app:popUpTo="@+id/gameFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameOverFragment"
        android:name="com.android.example.app_wowquiz_assn2.gameFinished.GameOverFragment"
        android:label="@string/game_over_title"
        tools:layout="@layout/fragment_game_over">
        <action
            android:id="@+id/action_gameOverFragment_to_gameFragment"
            app:destination="@+id/gameFragment"
            app:popUpTo="@+id/titleFragment" />
    </fragment>
</navigation>